--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pino-pretty": "^10.3.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
+    "rotating-file-stream": "^3.2.6",
     "rxjs": "^7.0.0",
     "sonic-boom": "^4.2.0"
   },
