--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
     "start": "nest start --watch",
     "dapr": "dapr init",
     "dapr:podman": "dapr init --container-runtime podman",
-    "dapr:start": "dapr run --app-id poc_dapr --app-protocol http --dapr-http-port 3500 --resources-path ./components",
+    "dapr:start": "dapr run --app-id poc_dapr --app-protocol http --dapr-http-port 3500 --resources-path ../components",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
     
   },
