--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,8 @@
     "type": "module",
     "scripts": {
         "start": "node index.js",
+        "dapr": "dapr init",
+        "dapr:podman": "dapr init --container-runtime podman",
         "start:dapr": "dapr run --app-port 5001 --app-id order-processing --app-protocol http --dapr-http-port 3501 --resources-path ../components -- yarn start"
     },
     "keywords": [],
