criando client event hub

--- a/event-hub/run-local/event-hub/Config.json
+++ b/event-hub/run-local/event-hub/Config.json
@@ -3,15 +3,15 @@
         "NamespaceConfig": [
         {
             "Type": "EventHub",
-            "Name": "emulatorNs1",
+            "Name": "flow",
             "Entities": [
             {
-                "Name": "eh1",
+                "Name": "audit",
                 "PartitionCount": 2,
                 "ConsumerGroups": [
-                {
-                    "Name": "cg1"
-                }
+                    {
+                        "Name": "audit_log"
+                    }
                 ]
             }
             ]
