--- a/event-hub/consumer/package.json
+++ b/event-hub/consumer/package.json
@@ -13,9 +13,12 @@
   },
   "dependencies": {
     "@azure/event-hubs": "^6.0.0",
+    "@azure/eventhubs-checkpointstore-blob": "^2.0.0",
+    "@azure/storage-blob": "^12.27.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "dotenv": "^16.5.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
