--- a/dapr/client/package.json
+++ b/dapr/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pubsub_server",
+  "name": "pubsub_client",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -16,7 +16,7 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
-    "parquetjs": "^0.11.2",
+    "body-parser": "^2.2.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
