--- a/dapr/components/pubsub.yaml
+++ b/dapr/components/pubsub.yaml
@@ -1,7 +1,7 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: orderpubsub
+  name: activity-log-dapr
 spec:
   type: pubsub.redis
   version: v1
