--- a/dapr/consumer/package.json
+++ b/dapr/consumer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pubsub_client",
+  "name": "pubsub_server",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -10,15 +10,16 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
-    
   },
   "dependencies": {
     "@dapr/dapr": "^3.5.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "parquetjs": "^0.11.2",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
