--- a/event-hub/client/package.json
+++ b/event-hub/client/package.json
@@ -16,6 +16,7 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "body-parser": "^2.2.0",
     "dotenv": "^16.5.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
